# local-llm-chat

./: Makefile
apps/api/: pyproject.toml
apps/api/src/: main.py
apps/api/src/database/: database.py  models.py  schemas.py
apps/api/src/routes/: auth_router.py  conversations_router.py  users_router.py
apps/api/src/utils/: auth_utils.py  users_utils.py
apps/web/: package-lock.json  package.json
apps/web/src/: Admin.tsx  App.tsx  Auth.tsx  Chat.tsx  Login.tsx  UsersList.tsx  index.css
apps/web/src/components/: Button.tsx  ChatInput.tsx  Input.tsx  LLMAnswer.tsx  Nav.tsx  UserMessageBubble.tsx
apps/web/src/components/ui/: Button.tsx  TextInput.tsx
apps/web/src/context/: ThemeContext.tsx
apps/web/src/utils/: generatePassword.ts
infra/: compose.yaml
