[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
useLibraryCodeForTypes = true
